Mon Dec 18 17:19:40 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented opening positionlists from inmemory databases.  Added
	  a testcase as well, which is run for quartz and inmemory.

Mon Dec 18 15:48:16 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented AllTermsIterator for quartz.  Interaction with
	  QuartzPostList needs to be cleaned up.

	* Added new functions [un]pack_string_preserving_sort(), which
	  pack a string in a way which preserves sort order.  Added a
	  testcase to quartztest.

	* Now use [un]pack_string_preserving_order() on postlist keys, so
	  that we can get at terms in sorted order.  (And get_tname_from_key()
	  added to separate out the term-unpacking as well as the packing)
	
	* Enabled test_allterms1 in apitest, but put it in a group of
	  tests only run for inmemory and quartz.  This should be extended
	  to other backends.

Mon Dec 18 14:33:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented tests of msetiterator and esetiterator copying and
	  assignment.

	* Fix segfault when assigning to [me]setiterator to end.

	* Updated todo.xml

Mon Dec 18 13:52:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Move creation of first key in a quartz postlist into a named
	  function (was scattered through the code).

Mon Dec 18 11:19:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Update todo.xml

Mon Dec 18 10:47:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove const from reverse_iterators in api_db.cc, so get around
	  brokenness of egcs 1.1.2

Mon Dec 18 09:41:54 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added apitest_space.txt to the Makefile.am

Sun Dec 17 16:15:03 GMT 2000 Olly Betts

	* Replaced all API uses of om_termname_list with OmTermIterator.

Fri Dec 15 18:54:10 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented OmAllTermsIterator interface in API.  It works for