@@ -683,6 +683,70 @@ static bool test_esetiterator2()
 }
 
 static void
+print_mset_weights(const OmMSet &mset)
+{
+    OmMSetIterator i = mset.begin();
+    for ( ; i != mset.end(); ++i) {
+        tout << " " << i.get_weight();
+    }
+}
+
+// tests the cutoff option
+static bool test_cutoff1()
+{
+    OmEnquire enquire(get_simple_database());
+    init_simple_enquire(enquire, query(OmQuery::OP_OR,
+				       "this", "line", "paragraph", "rubbish"));
+    OmMSet mymset1 = enquire.get_mset(0, 100);
+
+    if (verbose) {
+	tout << "Original mset weights:";
+	print_mset_weights(mymset1);
+	tout << "\n";
+    }
+
+    unsigned int num_items = 0;
+    om_weight my_wt = -100;
+    int changes = 0;
+    OmMSetIterator i = mymset1.begin();
+    int c = 0;
+    for ( ; i != mymset1.end(); ++i, ++c) {
+        om_weight new_wt = i.get_weight();
+        if (new_wt != my_wt) {
+	    changes++;
+	    if (changes > 3) break;
+	    num_items = c;
+	    my_wt = new_wt;
+	}
+    }
+
+    TEST_AND_EXPLAIN(changes > 3, "MSet not varied enough to test");
+    if (verbose) {
+        tout << "Cutoff weight: " << my_wt << "\n";
+    }
+
+    OmSettings mymopt;
+    mymopt.set("match_cutoff", my_wt);
+    OmMSet mymset2 = enquire.get_mset(0, 100, NULL, &mymopt);
+
+    if (verbose) {
+        tout << "Weights after cutoff:";
+	print_mset_weights(mymset2);
+        tout << "\n";
+    }
+
+    TEST_AND_EXPLAIN(mymset2.size() >= num_items,
+		     "Match with cutoff lost too many items");
+
+    TEST_AND_EXPLAIN(mymset2.size() == num_items ||
+		     (mymset2[num_items].get_weight() == my_wt &&
+		      mymset2.back().get_weight() == my_wt),
+		     "Match with cutoff returned too many items");
+
+    return true;
+}
+
+static void
 print_mset_percentages(const OmMSet &mset)
 {
     OmMSetIterator i = mset.begin();
@@ -1965,6 +2029,7 @@ test_desc db_tests[] = {
     {"topercent1",	   test_topercent1},
     {"expandfunctor1",	   test_expandfunctor1},
     {"pctcutoff1",	   test_pctcutoff1},
+    {"cutoff1",		   test_cutoff1},
     {"allowqterms1",       test_allowqterms1},
     {"maxattain1",         test_maxattain1},
     {"collapsekey1",	   test_collapsekey1},
