@@ -1,3 +1,11 @@
+Mon Dec 18 17:23:48 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added "match_cutoff" option to get_mset OmSettings.
+
+	* Added test for "match_cutoff" to apitest.
+
+	* Updated todo.xml
+
 Mon Dec 18 17:19:40 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Implemented opening positionlists from inmemory databases.  Added
